# turn-taking

./: README.md  pyproject.toml
doc/design/: README.md  design_objects.pu
docker/: Dockerfile  build.sh  run.sh
src/turn_taking/: __init__.py
