[project]
name = "turn-taking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mamoru.tsukamoto", email = "hamaantama@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
turn-taking = "turn_taking:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
